crates/ruff_python_formatter/tests/snapshots/black_compatibility@cases__f_docstring.py.snap
---
source: crates/ruff_python_formatter/tests/fixtures.rs
---
## Input

```python
def foo(e):
    f""" {'.'.join(e)}"""

def bar(e):
    f"{'.'.join(e)}"

def baz(e):
    F""" {'.'.join(e)}"""
```

## Black Differences

```diff
--- Black
+++ Ruff
@@ -1,5 +1,5 @@
 def foo(e):
-    f""" {'.'.join(e)}"""
+    f""" {".".join(e)}"""
 
 
 def bar(e):
@@ -7,4 +7,4 @@
 
 
 def baz(e):
-    f""" {'.'.join(e)}"""
+    f""" {".".join(e)}"""
```

## Ruff Output

```python
def foo(e):
    f""" {".".join(e)}"""


def bar(e):
    f"{'.'.join(e)}"


def baz(e):
    f""" {".".join(e)}"""
```

## Black Output

```python
def foo(e):
    f""" {'.'.join(e)}"""


def bar(e):
    f"{'.'.join(e)}"


def baz(e):
    f""" {'.'.join(e)}"""
```
